distros/D/Date/src/panda/date/parse-date.cc

#line 1 "src/panda/date/parse-date.rl"
#include "Date.h" 
#include <string.h>
#include <stdlib.h>
#include <algorithm>


#line 167 "src/panda/date/parse-date.rl"


namespace panda { namespace date {


#line 16 "src/panda/date/parse-date.cc"
static const int date_parser_start = 1;
static const int date_parser_first_final = 377;
static const int date_parser_error = 0;

static const int date_parser_en_all = 1;


#line 172 "src/panda/date/parse-date.rl"

static constexpr const int32_t WEEK_1_OFFSETS[] = {0, -1, -2, -3, 4, 3, 2};
static constexpr const int32_t WEEK_2_OFFSETS[] = {8, 7, 6, 5, 9, 10, 9};

static const Timezone* gmt_zone;

#define NSAVE(dest) { dest = acc; acc = 0; }
        
#define TZRULE(str) do {                    \
    memcpy(tzi.rule, str, sizeof(str) - 1); \
    tzi.len = sizeof(str) - 1;              \
} while(0)

void Date::parse (string_view str, int allowed_formats) {
    memset(&_date, 0, sizeof(_date)); // reset all values
    _date.mday = 1;
    _error = errc::ok;
    _mksec = 0;

    enum class TZType { LOCAL, OFFSET };
    
    const char* p      = str.data();
    const char* pe     = p + str.length();
    const char* eof    = pe;
    int         cs     = date_parser_en_all;
    uint64_t    acc    = 0;
    const char* mksec_ptr;
    int         format = 0;
    
    struct {
        char rule[14];
        int  len = 0;
    } tzi;
    
    unsigned week = 0;

    
#line 62 "src/panda/date/parse-date.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 70: goto st163;
		case 77: goto st281;
		case 83: goto st287;
		case 84: goto st300;
		case 87: goto st314;
		case 91: goto st323;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 94 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr8;
	goto st0;
tr8:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 109 "src/panda/date/parse-date.cc"
	switch( (*p) ) {
		case 32: goto tr9;
		case 46: goto tr10;
		case 47: goto tr11;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr12;
	goto st0;
tr9:
#line 17 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.mday); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 126 "src/panda/date/parse-date.cc"
	switch( (*p) ) {
		case 65: goto st5;
		case 68: goto st38;
		case 70: goto st41;
		case 74: goto st44;
		case 77: goto st50;
		case 78: goto st54;
		case 79: goto st57;
		case 83: goto st60;
	}
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 112: goto st6;
		case 117: goto st36;
	}
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 114 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto tr24;
	goto st0;
tr24:
#line 101 "src/panda/date/parse-date.rl"
	{ _date.mon = 3; }
	goto st8;
tr64:
#line 105 "src/panda/date/parse-date.rl"
	{ _date.mon = 7; }
	goto st8;
tr67:
#line 109 "src/panda/date/parse-date.rl"
	{ _date.mon = 11;}
	goto st8;
tr70:
#line 99 "src/panda/date/parse-date.rl"
	{ _date.mon = 1; }
	goto st8;
tr74:
#line 98 "src/panda/date/parse-date.rl"
	{ _date.mon = 0; }
	goto st8;
tr77:
#line 104 "src/panda/date/parse-date.rl"
	{ _date.mon = 6; }
	goto st8;
tr78:
#line 103 "src/panda/date/parse-date.rl"
	{ _date.mon = 5; }
	goto st8;
tr82:
#line 100 "src/panda/date/parse-date.rl"
	{ _date.mon = 2; }
	goto st8;
tr83:
#line 102 "src/panda/date/parse-date.rl"
	{ _date.mon = 4; }
	goto st8;
tr86:
#line 108 "src/panda/date/parse-date.rl"
	{ _date.mon = 10;}
	goto st8;
tr89:
#line 107 "src/panda/date/parse-date.rl"
	{ _date.mon = 9; }
	goto st8;
tr92:
#line 106 "src/panda/date/parse-date.rl"
	{ _date.mon = 8; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 213 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr25;
	goto st0;
tr25:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 228 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr26;
	goto st0;
tr26:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 243 "src/panda/date/parse-date.cc"
	if ( (*p) == 32 )
		goto tr27;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr28;
	goto st0;
tr27:
#line 21 "src/panda/date/parse-date.rl"
	{
        if (acc <= 50) _date.year = 2000 + acc;
        else           _date.year = 1900 + acc;
        acc = 0;
    }
	goto st11;
tr62:
#line 19 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.year); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 265 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr29;
	goto st0;
tr29:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 280 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr30;
	goto st0;
tr30:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 295 "src/panda/date/parse-date.cc"
	if ( (*p) == 58 )
		goto tr31;
	goto st0;
tr31:
#line 16 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.hour); }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 307 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr32;
	goto st0;
tr32:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 322 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr33;
	goto st0;
tr33:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 337 "src/panda/date/parse-date.cc"
	switch( (*p) ) {
		case 32: goto tr34;
		case 58: goto tr35;
	}
	goto st0;
tr34:
#line 15 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.min); }
	goto st17;
tr60:
#line 14 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.sec); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 355 "src/panda/date/parse-date.cc"
	switch( (*p) ) {
		case 43: goto tr36;
		case 45: goto tr36;
		case 65: goto st378;
		case 67: goto st22;
		case 69: goto st24;
		case 71: goto st26;
		case 77: goto st382;
		case 78: goto st384;
		case 80: goto st29;
		case 85: goto st27;
		case 89: goto st386;
		case 90: goto st381;
	}
	goto st0;
tr36:
#line 48 "src/panda/date/parse-date.rl"
	{
        tzi.rule[0] = '<';
        tzi.rule[1] = *p;
        tzi.rule[4] = ':';
        tzi.rule[7] = '>';
        tzi.rule[8] = *p ^ 6; // swap '+'<->'-': yes, it is reversed
        tzi.rule[11] = ':';
        tzi.rule[5] = tzi.rule[6] = tzi.rule[12] = tzi.rule[13] = '0'; // in case there will be no minutes
        tzi.len = 14;
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 388 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr47;
	goto st0;
tr47:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 403 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr48;
	goto st0;
tr48:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 418 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr49;
	goto st0;
tr49:
#line 59 "src/panda/date/parse-date.rl"
	{
        tzi.rule[2] = tzi.rule[9]  = *(p-2);
        tzi.rule[3] = tzi.rule[10] = *(p-1);
    }
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 438 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr50;
	goto st0;
tr50:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st377;
st377:
	if ( ++p == pe )
		goto _test_eof377;
case 377:
#line 453 "src/panda/date/parse-date.cc"
	goto st0;
st378:
	if ( ++p == pe )
		goto _test_eof378;
case 378:
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 68: goto st23;
		case 83: goto st23;
	}
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 84 )
		goto st379;
	goto st0;
st379:
	if ( ++p == pe )
		goto _test_eof379;
case 379:
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 68: goto st25;
		case 83: goto st25;
	}
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 84 )
		goto st380;
	goto st0;
st380:
	if ( ++p == pe )
		goto _test_eof380;
case 380:
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 77 )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 84 )
		goto st381;
	goto st0;
st381:
	if ( ++p == pe )
		goto _test_eof381;
case 381:
	goto st0;
st382:
	if ( ++p == pe )
		goto _test_eof382;
case 382:
	switch( (*p) ) {
		case 68: goto st28;
		case 83: goto st28;
	}
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 84 )
		goto st383;
	goto st0;
st383:
	if ( ++p == pe )
		goto _test_eof383;
case 383:
	goto st0;
st384:
	if ( ++p == pe )
		goto _test_eof384;
case 384:
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 68: goto st30;
		case 83: goto st30;
	}
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 84 )
		goto st385;
	goto st0;
st385:
	if ( ++p == pe )
		goto _test_eof385;
case 385:
	goto st0;
st386:
	if ( ++p == pe )
		goto _test_eof386;
case 386:
	goto st0;
tr35:
#line 15 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.min); }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 581 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr58;
	goto st0;
tr58:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 596 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr59;
	goto st0;
tr59:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 611 "src/panda/date/parse-date.cc"
	if ( (*p) == 32 )
		goto tr60;
	goto st0;
tr28:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 626 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr61;
	goto st0;
tr61:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 641 "src/panda/date/parse-date.cc"
	if ( (*p) == 32 )
		goto tr62;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 103 )
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) == 32 )
		goto tr64;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 101 )
		goto st39;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 99 )
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	if ( (*p) == 32 )
		goto tr67;
	goto st0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	if ( (*p) == 101 )
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) == 98 )
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( (*p) == 32 )
		goto tr70;
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 97: goto st45;
		case 117: goto st47;
	}
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	if ( (*p) == 110 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	if ( (*p) == 32 )
		goto tr74;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 108: goto st48;
		case 110: goto st49;
	}
	goto st0;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	if ( (*p) == 32 )
		goto tr77;
	goto st0;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	if ( (*p) == 32 )
		goto tr78;
	goto st0;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	if ( (*p) == 97 )
		goto st51;
	goto st0;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 114: goto st52;
		case 121: goto st53;
	}
	goto st0;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	if ( (*p) == 32 )
		goto tr82;
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	if ( (*p) == 32 )
		goto tr83;
	goto st0;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	if ( (*p) == 111 )
		goto st55;
	goto st0;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	if ( (*p) == 118 )
		goto st56;
	goto st0;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	if ( (*p) == 32 )
		goto tr86;
	goto st0;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	if ( (*p) == 99 )
		goto st58;
	goto st0;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
	if ( (*p) == 116 )
		goto st59;
	goto st0;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
	if ( (*p) == 32 )
		goto tr89;
	goto st0;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
	if ( (*p) == 101 )
		goto st61;
	goto st0;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	if ( (*p) == 112 )
		goto st62;
	goto st0;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
	if ( (*p) == 32 )
		goto tr92;
	goto st0;
tr10:
#line 17 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.mday); }
	goto st63;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
#line 848 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr93;
	goto st0;
tr93:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st64;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
#line 863 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr94;
	goto st0;
tr94:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st65;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
#line 878 "src/panda/date/parse-date.cc"
	if ( (*p) == 46 )
		goto tr95;
	goto st0;
tr95:
#line 18 "src/panda/date/parse-date.rl"
	{ _date.mon = acc - 1; acc = 0; }
	goto st66;
st66:
	if ( ++p == pe )
		goto _test_eof66;
case 66:
#line 890 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr96;
	goto st0;
tr96:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st67;
st67:
	if ( ++p == pe )
		goto _test_eof67;
case 67:
#line 905 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr97;
	goto st0;
tr97:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st68;
st68:
	if ( ++p == pe )
		goto _test_eof68;
case 68:
#line 920 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr98;
	goto st0;
tr98:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st69;
st69:
	if ( ++p == pe )
		goto _test_eof69;
case 69:
#line 935 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr99;
	goto st0;
tr99:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st387;
st387:
	if ( ++p == pe )
		goto _test_eof387;
case 387:
#line 950 "src/panda/date/parse-date.cc"
	goto st0;
tr11:
#line 17 "src/panda/date/parse-date.rl"
	{ NSAVE(_date.mday); }
	goto st70;
st70:
	if ( ++p == pe )
		goto _test_eof70;
case 70:
#line 960 "src/panda/date/parse-date.cc"
	switch( (*p) ) {
		case 65: goto st71;
		case 68: goto st95;
		case 70: goto st98;
		case 74: goto st101;
		case 77: goto st107;
		case 78: goto st111;
		case 79: goto st114;
		case 83: goto st117;
	}
	goto st0;
st71:
	if ( ++p == pe )
		goto _test_eof71;
case 71:
	switch( (*p) ) {
		case 112: goto st72;
		case 117: goto st93;
	}
	goto st0;
st72:
	if ( ++p == pe )
		goto _test_eof72;
case 72:
	if ( (*p) == 114 )
		goto st73;
	goto st0;
st73:
	if ( ++p == pe )
		goto _test_eof73;
case 73:
	if ( (*p) == 47 )
		goto tr111;
	goto st0;
tr111:
#line 101 "src/panda/date/parse-date.rl"
	{ _date.mon = 3; }
	goto st74;
tr132:
#line 105 "src/panda/date/parse-date.rl"
	{ _date.mon = 7; }
	goto st74;
tr135:
#line 109 "src/panda/date/parse-date.rl"
	{ _date.mon = 11;}
	goto st74;
tr138:
#line 99 "src/panda/date/parse-date.rl"
	{ _date.mon = 1; }
	goto st74;
tr142:
#line 98 "src/panda/date/parse-date.rl"
	{ _date.mon = 0; }
	goto st74;
tr145:
#line 104 "src/panda/date/parse-date.rl"
	{ _date.mon = 6; }
	goto st74;
tr146:
#line 103 "src/panda/date/parse-date.rl"
	{ _date.mon = 5; }
	goto st74;
tr150:
#line 100 "src/panda/date/parse-date.rl"
	{ _date.mon = 2; }
	goto st74;
tr151:
#line 102 "src/panda/date/parse-date.rl"
	{ _date.mon = 4; }
	goto st74;
tr154:
#line 108 "src/panda/date/parse-date.rl"
	{ _date.mon = 10;}
	goto st74;
tr157:
#line 107 "src/panda/date/parse-date.rl"
	{ _date.mon = 9; }
	goto st74;
tr160:
#line 106 "src/panda/date/parse-date.rl"
	{ _date.mon = 8; }
	goto st74;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
#line 1047 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr112;
	goto st0;
tr112:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st75;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
#line 1062 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr113;
	goto st0;
tr113:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st76;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
#line 1077 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr114;
	goto st0;
tr114:
#line 9 "src/panda/date/parse-date.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st77;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
#line 1092 "src/panda/date/parse-date.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr115;
